# refinery

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  main.cpp  pyproject.toml  setup.py
include/: debug_utils.h  nearest_neighbour_utils.h  refinement_utils.h  refiner_content.h  types.h  worker_utils.h
prototyping/: a.out  refiner_comparison.cpp  torch_loss.py  torchscript_acceleration.py
prototyping/AntennaDesign/: data_cleaner.py  data_plotter.py  error_function.py
prototyping/AntennaDesign/LRNN_network/: hybrid_lorentzian_rnn_final.pth  lorentzian_residual_model.py  test_model.py
prototyping/AntennaDesign/lorentzian_network/: lorentzian_model.py  premodel_mathematics.py  rmse_eval.py  test_model.py
prototyping/AntennaDesign/metaprototyping/: first_forward_sim.py  grid_forward_sim.py
prototyping/AntennaDesign/metaprototyping/Test1/: first_forward_sim.py  grid_forward_sim.py  meep_test.py  pixel_antenna.txt
prototyping/AntennaDesign/metaprototyping/Test2/baby_openems/: gen_patch.m  io_test.m  model.xml  simulate.py
prototyping/AntennaDesign/metaprototyping/Test3/: DataLoader.py  check_model.py  datasetCleaner.py  dip_counter.py  full_sweep_physics_model.pt  full_sweep_smooth_model.pt  model.py  model_PINN.py  model_function.py  random_plotter.py  s11_model.pt  s11_model_2.pt  s11_model_3.pt  s11_pinn_model.pt
prototyping/AudioLocalization/: Dataset_Generator.py  Static_Test.py  test_csv.csv  trig_3_mic.csv
prototyping/HeatFlow/: basicHeatSim.py
prototyping/Inverse_Kinematics/: Slider_Test.py  Static_Test.py  kuka_youbot.csv
py/: CMakeCache.txt  CMakeLists.txt  Makefile  bindings.cpp  cmake_install.cmake  testing.py  testing_plot.py
src/pyrefinery/: __init__.py
src/pyrefinery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
